--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,27 @@ name = "start-ml-final-project"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.8,<3.9"
 dependencies = [
-    "fastapi>=0.115.8",
-    "psycopg2-binary>=2.9.10",
-    "pydantic>=2.10.6",
-    "python-dotenv>=1.0.1",
-    "sqlalchemy>=2.0.38",
-    "uvicorn>=0.34.0",
+    "fastapi==0.75.1",
+    "pandas==1.4.2",
+    "sqlalchemy==1.4.35",
+    "requests==2.27.1",
+    "catboost==1.0.6",
+    "numpy==1.22.4",
+    "pydantic==1.9.1",
+    "scikit-learn==1.1.1",
+    #"lightgbm==2.0.3",
+    "xgboost==1.6.1",
+    "psycopg2-binary==2.9.3",
+    "uvicorn==0.16.0",
+    "category-encoders==2.5.0",
+    "loguru==0.6.0",
+    "implicit==0.7.1",
+    #"lightfm==1.16"
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
